--- a/config
+++ b/config
@@ -2,7 +2,7 @@ import tensorflow as tf
 import numpy as np
 import h5py
 import numpy
-from numpy import *
+from numpy import 
 import time
 import cv2
 import os
